sql/rpl_record.cc
@@ -217,8 +217,10 @@ unpack_row(Relay_log_info const *rli,
   {
     Field *const f= *field_ptr;
 
-    DBUG_PRINT("debug", ("field: %s; null mask: 0x%x; null bits: 0x%lx; row start: %p; null bytes: %d",
-                         f->field_name, null_mask, (ulong) null_bits, pack_ptr, master_null_byte_count));
+    DBUG_PRINT("debug", ("field: %s; null mask: 0x%x; null bits: 0x%lx;"
+                         " row start: %p; null bytes: %ld",
+                         f->field_name, null_mask, (ulong) null_bits,
+                         pack_ptr, (ulong) master_null_byte_count));
 
     /*
       No need to bother about columns that does not exist: they have
@@ -375,7 +377,7 @@ int prepare_record(const Slave_reporting_capability *const log,
         error = ER_NO_DEFAULT_FOR_FIELD;
       }
     }
-    else if (field_ptr - table->field >= cols->n_bits ||
+    else if ((uint) (field_ptr - table->field) >= cols->n_bits ||
              !bitmap_is_set(cols, field_ptr - table->field))
     {
       DBUG_PRINT("debug", ("Set default; field: %s", f->field_name));
