sql/rpl_record.h
@@ -31,7 +31,7 @@ int unpack_row(Relay_log_info const *rli,
 
 // Fill table's record[0] with default values.
 int prepare_record(const Slave_reporting_capability *const, TABLE *const, 
-                   const uint =0, const bool =FALSE);
+                   const MY_BITMAP *cols, uint width, const bool);
 #endif
 
 #endif
